# pybleau

./: .gitignore  LICENSE  README.md  auth.py  cli.py  create_tableau_demo.py  pyproject.toml  requirements.txt  setup.cfg  yaml
.github/workflows/: pyproject.toml  python-package.yml  python-publish.yml
examples/: advanced_visualization_demo.ipynb  tableau_integration_demo.ipynb
pybleau/: __init__.py  auth.py  metadata.py  requirements.txt  viz.py  workbooks.py
pybleau.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_auth.py  test_diagnostic.py  test_integration.py  test_viz.py  test_workbooks.py  tests.py  tests_ metadata.py
