[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybleau"
version = "0.1.0"
description = "A Python library to programmatically interact with Tableau (REST API, Hyper, Metadata)."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "navinniish"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/navinniish/pybleau"
Repository = "https://github.com/navinniish/pybleau.git"
Issues = "https://github.com/navinniish/pybleau/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pybleau*"]
