[metadata]
name = pybleau
version = 0.1.0
description = A Python library to interact with Tableau
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
url = https://github.com/navinniish/pybleau

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0
    click>=8.0

[options.entry_points]
console_scripts =
    pybleau = pybleau.cli:main
