[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybleau"
version = "0.1.0"
description = "Python wrapper for Tableau's REST and Metadata APIs"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Navin Niish", email = "navinniish001@gmail.com"}
]
keywords = ["tableau", "api", "rest", "metadata", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8.0",
    "black>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/navinniish/pybleau"
Repository = "https://github.com/navinniish/pybleau"
Issues = "https://github.com/navinniish/pybleau/issues"

[project.scripts]
pybleau = "pybleau.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pybleau*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
]
