[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybleau"
version = "0.1.0"
description = "A Python library for Tableau APIs"
authors = [{name = "navinniish"}]
dependencies = ["requests"]

[tool.setuptools]
py-modules = ["auth", "cli", "metadata", "workbooks"]
